--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,8 @@ app.front.address=http://localhost:8080
 
 #logger
 logging.level.com.wasacz.hfms=debug
+
+app.receipt.storage.path=src/main/resources/savedReceipt
+
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=5MB
