--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -7,3 +7,7 @@ hibernate.hbm2ddl.auto=create
 app.jwtSecret=forTestPurpouse
 app.jwtExpirationInMs = 1000
 app.front.address=localhost
+
+app.receipt.storage.path=src/test/resources/savedReceipt
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=5MB
