Add new parameter

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,4 +21,4 @@ spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
 
 #properties to create example user
-recreateExampleUser=true
+recreateExampleUser=${CREATE_EXAMPLE_USER}
