--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8081
 server.error.include-message=always
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=${DDL_AUTO}
 spring.jpa.show-sql=false
 spring.datasource.url=jdbc:postgresql://${DB_IP}:${DP_PORT:5432}/${DB_NAME}
 spring.datasource.username=${DB_USER}
